--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -364,7 +364,9 @@
     <Compile Include="ViewModels\BudgetDetailReportViewModel.cs" />
     <Compile Include="ViewModels\BudgetPhaseViewModel.cs" />
     <Compile Include="ViewModels\DailyReportViewModel.cs" />
+    <Compile Include="ViewModels\InvoiceIndexViewModel.cs" />
     <Compile Include="ViewModels\InvoiceViewModel.cs" />
+    <Compile Include="ViewModels\ProjectSelectViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
