--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -362,7 +362,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\BudgetDetailReportViewModel.cs" />
-    <Compile Include="ViewModels\BudgetPhaseViewModel.cs" />
+    <Compile Include="ViewModels\BudgetIndexViewModel.cs" />
+    <Compile Include="ViewModels\BudgetPhaseViewModelOG.cs" />
     <Compile Include="ViewModels\DailyReportViewModel.cs" />
     <Compile Include="ViewModels\DashboardViewModel.cs" />
     <Compile Include="ViewModels\InvoiceIndexViewModel.cs" />
@@ -407,6 +408,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Budget.js" />
+    <Content Include="Scripts\BudgetOG.js" />
     <Content Include="Scripts\DailyReport.js" />
     <Content Include="Scripts\DataTablesCustomization.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -522,7 +524,7 @@
     <Content Include="Views\ContractExhibits\Details.cshtml" />
     <Content Include="Views\ContractExhibits\Edit.cshtml" />
     <Content Include="Views\ContractExhibits\Index.cshtml" />
-    <Content Include="Views\Budget\Index.cshtml" />
+    <Content Include="Views\Budget\IndexOG.cshtml" />
     <Content Include="Views\Invoice\Index.cshtml" />
     <Content Include="Views\Invoices\Create.cshtml" />
     <Content Include="Views\Invoices\Delete.cshtml" />
@@ -583,6 +585,7 @@
     <Content Include="Views\Budget\Details.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\DailyReport\WorkFlow.cshtml" />
+    <Content Include="Views\Budget\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
