--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -603,6 +603,7 @@
     <Content Include="Views\Budget\Index.cshtml" />
     <Content Include="Views\Contract\CreateBCO.cshtml" />
     <Content Include="Views\Shared\_LayoutReport.cshtml" />
+    <Content Include="Views\Budget\Workflow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
