--- a/PCA/PCA/PCA.csproj
+++ b/PCA/PCA/PCA.csproj
@@ -411,6 +411,7 @@
     <Content Include="Content\Images\random_grey_variations.png" />
     <Content Include="Content\Images\whiteblue.gif" />
     <Content Include="Content\Images\whiteblue2x.gif" />
+    <Content Include="Content\jquery.dynatable.css" />
     <Content Include="Content\Layout117.css" />
     <Content Include="Content\LayoutCurrent.css" />
     <Content Include="Content\LayoutOLD.css" />
@@ -441,6 +442,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.dynatable.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
